--- a/Arkanoid/Arkanoid.vcxproj
+++ b/Arkanoid/Arkanoid.vcxproj
@@ -35,6 +35,7 @@
     <ClInclude Include="Game\GameStates\MainGameplay\ISubGameplayState.h" />
     <ClInclude Include="Game\GameStates\MainGameplay\LevelLoader\LevelLoader.h" />
     <ClInclude Include="Game\GameStates\MainGameplay\MainGameplayState.h" />
+    <ClInclude Include="Game\GameStates\MainGameplay\Observer\GameManager.h" />
     <ClInclude Include="Game\GameStates\MainGameplay\Observer\Observer.h" />
     <ClInclude Include="Game\GameStates\MainGameplay\Observer\Subject.h" />
     <ClInclude Include="Game\GameStates\MainGameplay\PauseState\PauseState.h" />
@@ -60,7 +61,7 @@
     <ClCompile Include="Game\GameStates\MainGameplay\GameObjects\Platform.cpp" />
     <ClCompile Include="Game\GameStates\MainGameplay\LevelLoader\LevelLoader.cpp" />
     <ClCompile Include="Game\GameStates\MainGameplay\MainGameplayState.cpp" />
-    <ClCompile Include="Game\GameStates\MainGameplay\Observer\Observer.cpp" />
+    <ClCompile Include="Game\GameStates\MainGameplay\Observer\GameManager.cpp" />
     <ClCompile Include="Game\GameStates\MainGameplay\PauseState\PauseState.cpp" />
     <ClCompile Include="Game\GameStates\MainMenu\MainMenuState.cpp" />
     <ClCompile Include="Game\GameStates\SettingsMenu\ResolutionSettingsMenu.cpp" />
